--- a/.gitignore
+++ b/.gitignore
@@ -16,19 +16,5 @@
 !/log/.keep
 /tmp
 
-config/secrets.yml
-config/database.yml
-
-/public/packs
-/public/packs-test
-
-/yarn-error.log
-yarn-debug.log*
-.yarn-integrity
-
-/public/packs
-/public/packs-test
-/node_modules
-/yarn-error.log
-yarn-debug.log*
-.yarn-integrity
+# config/secrets.yml
+# config/database.yml
