--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 !/log/.keep
 /tmp
 
-*/config/application.yml
-# config/secrets.yml
-# config/database.yml
+config/application.yml
+config/secrets.yml
+config/database.yml
+
+storage
