Ajustes schedule e add comentários

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,5 +1,6 @@
 development:
-  host:           'localhost:3000'
+
+  host:           'http://localhost:3000'
   user_name:      'suporte@agilekronos.online'
   password:       '7bDprAvXky6UBQ8'
   domain:         'agilekronos.online'
